# TeamTalkbycentos

auto_setup/im_server/conf/: dbproxyserver.conf
server/src/: build.sh  copyconfs.sh  make_log4cxx.sh  runserver.sh
server/src/base/: version.h
server/src/db_proxy_server/: CMakeLists.txt
server/src/db_proxy_server/business/: InterLogin.cpp
server/src/http_msg_server/: httpmsgserver.conf
server/src/libconf/: 9dbproxyserver.conf  9fileserver.conf  9httpmsgserver.conf  9loginserver.conf  9msfs.conf  9msgserver.conf  9pushserver.conf  9routeserver.conf
server/src/login_server/: loginserver.conf
server/src/msg_server/: msgserver.conf
server/src/route_server/: routeserver.conf
server/src/tools/: daeml
